--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@ layout: home
 author_profile: true
 sidebar:
   nav: docs
+
+title: "bnovkebin"
+subtitle: "system hacker"
+description: "Be a good Hacker"
 ---
