--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ sidebar:
   nav: docs
 
 title: "bnovkebin"
-subtitle: "system hacker"
+subtitle: "Nosce Te Ipsum"
 description: "Be a good Hacker"
 ---
