--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ author_profile: true
 sidebar:
   nav: docs
 
-title: "hi"
-subtilte:: "Nosce Te Ipsum"
+title: "bnovkebin"
+subtitle:: "Nosce Te Ipsum"
 use-site-title: true
 ---
 
