--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@ layout: home
 author_profile: true
 sidebar:
   nav: docs
-
-title: "bnovkebin"
-subtitle: "Nosce Te Ipsum"
-use-site-title: true
 ---
 
 
-wo
+two
